[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
requires-external = [
        "vips >= 8.0",  # adjust version number as needed
]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["memesdb"]

[project]
name = "memesdb"
version = "0.1.1"
authors = [
    { name="baketnk", email="baketnk@protonmail.com" },
]
description = "index and search your meme stash with ai"
readme = "README.md"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "Pillow",
    "sentence-transformers",
    "sqlite-vec",
    "fzf.py",
    "pyvips",
    "einops",
    "moondream",
    "imagehash",
]

[project.scripts]
memesdb = "memesdb.cli:app"

[project.urls]
"Homepage" = "https://github.com/yourusername/memesdb"
"Bug Tracker" = "https://github.com/yourusername/memesdb/issues"
